# TradeCore

./: .gitignore  CMakeLists.txt
include/tradecore/common/: Enums.hpp
include/tradecore/model/: Order.hpp  OrderBook.hpp  OrderLocation.hpp  PriceLevel.hpp
include/tradecore/model/matching/: MatchingEngine.hpp
include/tradecore/types/: Types.hpp
src/: main.cpp
src/matching/: MatchingEngine.cpp
src/model/: Order.cpp  OrderBook.cpp  PriceLevel.cpp
